--- a/turtlebot3/turtlebot3_navigation/param_cp/dwa_local_planner_params_burger.yaml
+++ b/turtlebot3/turtlebot3_navigation/param_cp/dwa_local_planner_params_burger.yaml
@@ -2,39 +2,39 @@ DWAPlannerROS:
 
 # Robot Configuration Parameters
   max_vel_x: 0.22
-  min_vel_x: 0
+  min_vel_x: -0.22
 
   max_vel_y: 0.0
   min_vel_y: 0.0
 
 # The velocity when robot is moving in a straight line
   max_trans_vel:  0.22
-  min_trans_vel:  0.0
+  min_trans_vel:  0.05
 
   max_rot_vel: 2.84
-  min_rot_vel: 0.0
+  min_rot_vel: 0.7
 
-  acc_lim_x: 20
+  acc_lim_x: 2.0
   acc_lim_y: 0.0
-  acc_lim_theta: 10
+  acc_lim_theta: 1.0
 
 # Goal Tolerance Parametes
   xy_goal_tolerance: 0.05
-  yaw_goal_tolerance: 0.17
+  yaw_goal_tolerance: 0.15
   latch_xy_goal_tolerance: false
 
 # Forward Simulation Parameters
-  sim_time: 1.5
+  sim_time: 2.0
   vx_samples: 20
   vy_samples: 0
   vth_samples: 40
   controller_frequency: 10.0
 
 # Trajectory Scoring Parameters
-  path_distance_bias: 40
-  goal_distance_bias: 20.0
-  occdist_scale: 0.005
-  forward_point_distance: 0.25
+  path_distance_bias: 32 #60
+  goal_distance_bias: 24.0  #20.0
+  occdist_scale: 0.04
+  forward_point_distance: 0.325 #0.1
   stop_time_buffer: 0.2
   scaling_speed: 0.25
   max_scaling_factor: 0.2
