--- a/turtlebot3/turtlebot3_goal_send/CMakeLists.txt
+++ b/turtlebot3/turtlebot3_goal_send/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(goal_send)
+project(turtlebot3_goal_send)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
