--- a/turtlebot3/turtlebot3_goal_send/package.xml
+++ b/turtlebot3/turtlebot3_goal_send/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>goal_send</name>
+  <name>turtlebot3_goal_send</name>
   <version>0.0.0</version>
   <description>The goal_send package</description>
 
