--- a/turtlebot3/turtlebot3_goal_send/CMakeLists.txt
+++ b/turtlebot3/turtlebot3_goal_send/CMakeLists.txt
@@ -12,13 +12,12 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   move_base_msgs
   tf
-  goal_send_msgs
 )
 
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES goal_send
-#  CATKIN_DEPENDS roscpp std_msgs
+   CATKIN_DEPENDS roscpp std_msgs
 #  DEPENDS system_lib
 #  CATKIN_DEPENDS roscpp std_msgs message_runtime
 )
@@ -56,5 +55,19 @@ target_link_libraries(4goal_waypoint_send ${catkin_LIBRARIES})
 # Install
 ################################################################################
 install(DIRECTORY launch
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
+install(TARGETS 4goal_waypoint_send
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+install(TARGETS goal_waypoint_control_key
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
+install(DIRECTORY src
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
