CMakeLists 4goal_waypoint_send_2 Install add

--- a/turtlebot3/turtlebot3_goal_send/CMakeLists.txt
+++ b/turtlebot3/turtlebot3_goal_send/CMakeLists.txt
@@ -60,7 +60,7 @@ target_link_libraries(4goal_waypoint_send_2 ${catkin_LIBRARIES})
 install(DIRECTORY launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
-install(TARGETS 4goal_waypoint_send
+install(TARGETS 4goal_waypoint_send_2
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
