--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,43 @@
 sudo: required
-dist: trusty
-services:
-  - docker
+cache:
+- apt
 language: generic
-python:
-  - "2.7"
-compiler:
-  - gcc
-notifications:
 
+# ros distro
+matrix:
+  include:
+  - name: "bionic melodic"
+    dist: bionic
+    env: ROS_DISTRO=melodic
+
+# env
 env:
-  matrix:
-    - ROS_DISTRO=melodic ROS_REPO=ros-shadow-fixed UPSTREAM_WORKSPACE=debian OS_NAME=ubuntu OS_CODE_NAME=bionic
-   
-  allow_failures:
-    - env: ROS_DISTRO=melodic ROS_REPO=ros-shadow-fixed UPSTREAM_WORKSPACE=debian OS_NAME=debian OS_CODE_NAME=stretch
-branches:
-  only:
-    - master
-    - develop
-    - takagon_delivery_challenge
+  global:
+    - ROS_CI_DESKTOP="`lsb_release -cs`"
+    - CI_SOURCE_PATH=$(pwd)
+
+before_install:
+  # install ros_script
+  - git clone https://github.com/ryuichiueda/ros_setup_scripts_Ubuntu18.04_desktop.git
+
+  # ros_install
+  - ./step0.bash && ./step1.bash
+
+
 install:
-  - git clone https://github.com/ros-industrial/industrial_ci.git .ci_config
+  # make catkin_ws
+  - mkdir -p ~/catkin_ws/src
+  - cd ~/catkin_ws/src
+  - catkin_init_workspace
+  - cd ~/catkin_ws
+  - catkin_make
+  - source devel/setup.bash
+  - cd ~/catkin_ws/src
+  - ln -s $CI_SOURCE_PATH .
+  # additional src package for build
+  - git clone -b  takagon_delivery_challenge  https://github.com/uhobeike/turtlebot3_aws
+
 script:
+  # build
+  - cd ~/catkin_ws
+  - catkin_make
