--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ install:
   - cd ~/catkin_ws/src
   - ln -s $CI_SOURCE_PATH .
   # additional src package for build
-  - git clone -b  takagon_delivery_challenge  https://github.com/uhobeike/turtlebot3_aws
+  - git clone -b takagon_delivery_challenge https://github.com/uhobeike/turtlebot3_aws.git
 
 script:
   # build
