--- a/turtlebot3/turtlebot3_goal_send/CMakeLists.txt
+++ b/turtlebot3/turtlebot3_goal_send/CMakeLists.txt
@@ -54,6 +54,9 @@ target_link_libraries(4goal_waypoint_send ${catkin_LIBRARIES})
 add_executable(4goal_waypoint_send_2 src/4goal_waypoint_send_2.cpp)
 target_link_libraries(4goal_waypoint_send_2 ${catkin_LIBRARIES})
 
+add_executable(4goal_waypoint_send_3 src/4goal_waypoint_send_3.cpp)
+target_link_libraries(4goal_waypoint_send_3 ${catkin_LIBRARIES})
+
 ################################################################################
 # Install
 ################################################################################
